--- a/reviews.html
+++ b/reviews.html
@@ -133,25 +133,107 @@ If you have any comments, please do contact me.</p>
 
 <div class="w3-row-padding">
   <div class="w3-third w3-black">
-<img src="photos/andybgoode0012-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx">
-    <h3>title 1</h3>
-    <p>content 1</p>
+<img src="photos/andybgoode0011-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="Dosthill Vintage Summer Fayre">
+    <h3>E . Cutler (Dosthill, Vintage Fayre)</h3>
+    <p>"Andy B Goode exceeded our expectations, so professional, an excellent act which was very good value for money."<br/>
+"Having Andy B Goode at our vintage fair really set the scene and made the vintage context."<br/>
+"It was lovely to see people of all ages stop, sit and listen, sing along or boogie on down."</p>
   </div>
 
   <div class="w3-third w3-black">
-<img src="photos/andybgoode0012-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx">
-    <h3>title 2</h3>
-    <p>content 2</p>
+<img src="photos/andybgoode0016-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="Birthday Party">
+    <h3>C. Kirkwood (Derby, Birthday Party)</h3>
+    <p>"Your act was first class, very professional, Having heard you before we knew you would do a great job and we weren't disappointed. Great value for a special evening."<br/>
+"If anyone is looking for a fun, professional singing act, 'Andy B Goode' is the guy for you."<br/>
+"it doesn't matter the age group as the type of songs 'Andy B Goode' sings, he gets everybody singing and dancing along. Highly recommended."</p>
   </div>
 
   <div class="w3-third w3-black">
-<img src="photos/andybgoode0012-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx">
-    <h3>title 3</h3>
-    <p>content 3</p>
+<img src="photos/andybgoode0017-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="Village Fair">
+    <h3>L . Ward (Norton-Juxta-Twycross, Village Fete)</h3>
+    <p>"5/5…. act met my expectations, Andy B Goode was fantastic, great range of songs and always entertaining"<br/>
+"very entertaining - great show to sit and watch from start to finish, but also worked well as background music for people that were wandering in and out of the refreshment area, at our village fair"<br/>
+"The song selection was great and Andrew performance is suitable for a wide variety of events"</p>
   </div>
 </div>
 
 
+<div class="w3-row-padding">
+  <div class="w3-third w3-black">
+<img src="photos/andybgoode0005-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="Birthday Party">
+    <h3>E . Jones (Her Birthday Party)</h3>
+    <p>"Totally! Fab evening completely brought to life with the excellent entertainment!"<br/>
+"Everyone commented about the great atmosphere with your music.  A great party atmosphere and very pro! Loved it!"</p>
+  </div>
+
+  <div class="w3-third w3-black">
+<img src="photos/andybgoode0015-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="Birthday Party">
+    <h3>P. Reed (Birthday Party)</h3>
+    <p>"The act was very good and met the expectations of the audience"<br/>
+"Great evening - people singing along with some rock classics and a great party atmosphere"</p>
+  </div>
+
+  <div class="w3-third w3-black">
+<img src="photos/thejays0006-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="Andy B Goode and The Jays at Tamworth Bandstand">
+    <h3>S. Smith (Tamworth Bandstand near Tamworth Castle)</h3>
+    <p>"it was great, lot of familiar tunes which people enjoyed and danced to!"<br/>
+"Very upbeat and familiar set, great for a party, and for getting people dancing!"</p>
+  </div>
+</div>
+
+
+<div class="w3-row-padding">
+  <div class="w3-third w3-black">
+<img src="images/redandginger-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="Red and Ginger (Professional Dance Teachers)">
+    <h3>Red and Ginger (Vintage 1950s Tea Dance)</h3>
+    <p><a href="https://www.facebook.com/DanceWithRedAndGinger">Red and Ginger</a> are professional Lindy Hop dancer teachers.<br/>
+"We had a blast."<br/>
+"We loved way you played with the music for us to dance to."<br/>
+"This guy is awesome. If you're a dancer, book him!"</p>
+  </div>
+
+  <div class="w3-third w3-black">
+<img src="photos/andybgoode0027-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="Loughborough Loves Vintage Fair">
+    <h3>L . May (Loughborough Loves Vintage Fair)</h3>
+    <p>"Andy, Thank you so SO much for today (I cannot actually thank you enough!!)."<br/>
+"You were absolutely brilliant, all day, and helped make the event a success."<br/>
+"I will definitely be in touch regarding the next event in Loughborough, and of course the August festival."</p>
+  </div>
+
+  <div class="w3-third w3-black">
+<img src="photos/thejays0027-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="Wedding Reception">
+    <h3>S. Greenwood (Her Wedding Reception)</h3>
+    <p>"Thank you so much Andy you were fantastic and made our wedding day more magical x x x."</p>
+  </div>
+</div>
+
+
+<div class="w3-row-padding">
+  <div class="w3-third w3-black">
+<img src="photos/andybgoode0030-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="Care Home">
+    <h3>L . Smith (Care Home)</h3>
+    <p>"The residents were still talking about you this morning."<br/>
+"Thanks again and see you soon."<br/>
+"It was fantastic!!"</p>
+  </div>
+
+  <div class="w3-third w3-black">
+<img src="photos/andybgoode0041-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx">
+    <h3>J. Harley (North West Leicestershire District Council)</h3>
+    <p>"I booked you for a Christmas event in Ashby a few years ago, so know that you are really professional and very entertaining with a style that would fit our event beautifully."</p>
+  </div>
+
+  <div class="w3-third w3-black">
+<img src="photos/andybgoode0041-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx">
+    <h3>A. Bexton (North West Leicestershire District Council)</h3>
+    <p>"Just a quick note to say what a great performance you gave us on Saturday at Music in the Parks Coalville."<br/>
+"Everyone really enjoyed your set."<br/>
+"IT was a great opener to the event."</p>
+  </div>
+</div>
+
+
+<!--
 <div class="w3-row-padding">
   <div class="w3-third w3-black">
 <img src="photos/andybgoode0012-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx">
@@ -171,69 +253,7 @@ If you have any comments, please do contact me.</p>
     <p>content 3</p>
   </div>
 </div>
-
-
-<div class="w3-row-padding">
-  <div class="w3-third w3-black">
-<img src="photos/andybgoode0012-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx">
-    <h3>title 1</h3>
-    <p>content 1</p>
-  </div>
-
-  <div class="w3-third w3-black">
-<img src="photos/andybgoode0012-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx">
-    <h3>title 2</h3>
-    <p>content 2</p>
-  </div>
-
-  <div class="w3-third w3-black">
-<img src="photos/andybgoode0012-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx">
-    <h3>title 3</h3>
-    <p>content 3</p>
-  </div>
-</div>
-
-
-<div class="w3-row-padding">
-  <div class="w3-third w3-black">
-<img src="photos/andybgoode0012-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx">
-    <h3>title 1</h3>
-    <p>content 1</p>
-  </div>
-
-  <div class="w3-third w3-black">
-<img src="photos/andybgoode0012-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx">
-    <h3>title 2</h3>
-    <p>content 2</p>
-  </div>
-
-  <div class="w3-third w3-black">
-<img src="photos/andybgoode0012-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx">
-    <h3>title 3</h3>
-    <p>content 3</p>
-  </div>
-</div>
-
-
-<div class="w3-row-padding">
-  <div class="w3-third w3-black">
-<img src="photos/andybgoode0012-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx">
-    <h3>title 1</h3>
-    <p>content 1</p>
-  </div>
-
-  <div class="w3-third w3-black">
-<img src="photos/andybgoode0012-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx">
-    <h3>title 2</h3>
-    <p>content 2</p>
-  </div>
-
-  <div class="w3-third w3-black">
-<img src="photos/andybgoode0012-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx">
-    <h3>title 3</h3>
-    <p>content 3</p>
-  </div>
-</div>
+-->
 
 
 <div class="w3-container w3-black w3-border-bottom w3-border-black">
