--- a/blankPage.html
+++ b/blankPage.html
@@ -63,14 +63,14 @@
   <a href="music.html" class="w3-bar-item w3-button w3-border w3-hide-small">Music</a>
   <a href="songlist.html" class="w3-bar-item w3-button w3-border w3-hide-small">Songs</a>
   <a href="news.html" class="w3-bar-item w3-button w3-border w3-hide-small">News</a>
-  <a href="testimonials.html" class="w3-bar-item w3-button w3-border w3-hide-small">Reviews</a>
+  <a href="reviews.html" class="w3-bar-item w3-button w3-border w3-hide-small">Reviews</a>
 </div>
 <div id="topMenu" class="w3-bar-block w3-border w3-hide w3-hide-large w3-hide-medium w3-black">
   <a href="photos.html" class="w3-bar-item w3-button w3-border">Photos</a>
   <a href="music.html" class="w3-bar-item w3-button w3-border">Music</a>
   <a href="songlist.html" class="w3-bar-item w3-button w3-border">Songs</a>
   <a href="news.html" class="w3-bar-item w3-button w3-border">News</a>
-  <a href="testimonials.html" class="w3-bar-item w3-button w3-border">Reviews</a>
+  <a href="reviews.html" class="w3-bar-item w3-button w3-border">Reviews</a>
 </div>
 <script>
 
