--- a/reviews.html
+++ b/reviews.html
@@ -108,7 +108,8 @@ If you have any comments, please do contact me.</p>
 <div class="w3-row-padding">
   <div class="w3-third w3-black">
 <img src="photos/andybgoode0012-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="Dosthill Vintage Summer Fayre">  
-    <h3>J. Franklin (Fete)</h3>
+    <h3>J. Franklin</h3>
+	<h4>Fete</h4>
     <p>"My expectations were vastly exceeded!  Great quality voice and equipment made for a splendid performance."<br/>
 "'Andy B Goode' is a splendid performer who gives consistently good performance across a wide range of singing styles."<br/>
 "'La Bamba' is especially good to hear. Perfect for weddings, christenings, birthdays etc.  Would highly recommend."</p>
@@ -116,7 +117,8 @@ If you have any comments, please do contact me.</p>
 
   <div class="w3-third w3-black">
 <img src="photos/andybgoode0029-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="Dosthill Church Fete">
-    <h3>Rev L . Shaw (Dosthill, Church Fete)</h3>
+    <h3>Rev L . Shaw</h3>
+	<h4>Dosthill, Church Fete</h4>
     <p>"He created the perfect atmosphere."<br/>
 "Visitors to the fete and people on stalls were bopping away and enjoying the well known songs."<br/>
 "Andy B Goode was a quality addition to our fete and really made the day"</p>
@@ -124,7 +126,8 @@ If you have any comments, please do contact me.</p>
 
   <div class="w3-third w3-black">
 <img src="photos/andybgoode0019-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="Polesworth Vintage and Antiques Fair">
-    <h3>N. Bauer (Polesworth, Vintage and Antiques Fair)</h3>
+    <h3>N. Bauer</h3>
+	<h4>Polesworth, Vintage and Antiques Fair</h4>
     <p>"The Act was awesome full a great mix of songs, and how you helped us by making the announcements for us was more than we expected."<br/>
 "He has an amazing voice and a thoroughly nice chap. If you need some vintage Rock N Roll, you need Andy B Goode."</p>
   </div>
@@ -134,7 +137,8 @@ If you have any comments, please do contact me.</p>
 <div class="w3-row-padding">
   <div class="w3-third w3-black">
 <img src="photos/andybgoode0011-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="Dosthill Vintage Summer Fayre">
-    <h3>E . Cutler (Dosthill, Vintage Fayre)</h3>
+    <h3>E . Cutler</h3>
+	<h4>Dosthill, Vintage Fayre</h4>
     <p>"Andy B Goode exceeded our expectations, so professional, an excellent act which was very good value for money."<br/>
 "Having Andy B Goode at our vintage fair really set the scene and made the vintage context."<br/>
 "It was lovely to see people of all ages stop, sit and listen, sing along or boogie on down."</p>
@@ -142,7 +146,8 @@ If you have any comments, please do contact me.</p>
 
   <div class="w3-third w3-black">
 <img src="photos/andybgoode0016-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="Birthday Party">
-    <h3>C. Kirkwood (Derby, Birthday Party)</h3>
+    <h3>C. Kirkwood</h3>
+	<h4>Derby, Birthday Party</h4>
     <p>"Your act was first class, very professional, Having heard you before we knew you would do a great job and we weren't disappointed. Great value for a special evening."<br/>
 "If anyone is looking for a fun, professional singing act, 'Andy B Goode' is the guy for you."<br/>
 "it doesn't matter the age group as the type of songs 'Andy B Goode' sings, he gets everybody singing and dancing along. Highly recommended."</p>
@@ -150,7 +155,8 @@ If you have any comments, please do contact me.</p>
 
   <div class="w3-third w3-black">
 <img src="photos/andybgoode0017-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="Village Fair">
-    <h3>L . Ward (Norton-Juxta-Twycross, Village Fete)</h3>
+    <h3>L . Ward</h3>
+	<h4>Norton-Juxta-Twycross, Village Fete</h4>
     <p>"5/5…. act met my expectations, Andy B Goode was fantastic, great range of songs and always entertaining"<br/>
 "very entertaining - great show to sit and watch from start to finish, but also worked well as background music for people that were wandering in and out of the refreshment area, at our village fair"<br/>
 "The song selection was great and Andrew performance is suitable for a wide variety of events"</p>
@@ -161,21 +167,24 @@ If you have any comments, please do contact me.</p>
 <div class="w3-row-padding">
   <div class="w3-third w3-black">
 <img src="photos/andybgoode0005-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="Birthday Party">
-    <h3>E . Jones (Her Birthday Party)</h3>
+    <h3>E . Jones</h3>
+	<h4>Her Birthday Party</h4>
     <p>"Totally! Fab evening completely brought to life with the excellent entertainment!"<br/>
 "Everyone commented about the great atmosphere with your music.  A great party atmosphere and very pro! Loved it!"</p>
   </div>
 
   <div class="w3-third w3-black">
 <img src="photos/andybgoode0015-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="Birthday Party">
-    <h3>P. Reed (Birthday Party)</h3>
+    <h3>P. Reed</h3>
+	<h4>Birthday Party</h4>
     <p>"The act was very good and met the expectations of the audience"<br/>
 "Great evening - people singing along with some rock classics and a great party atmosphere"</p>
   </div>
 
   <div class="w3-third w3-black">
 <img src="photos/thejays0006-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="Andy B Goode and The Jays at Tamworth Bandstand">
-    <h3>S. Smith (Tamworth Bandstand near Tamworth Castle)</h3>
+    <h3>S. Smith</h3>
+	<h4>Tamworth Bandstand near Tamworth Castle</h4>
     <p>"it was great, lot of familiar tunes which people enjoyed and danced to!"<br/>
 "Very upbeat and familiar set, great for a party, and for getting people dancing!"</p>
   </div>
@@ -185,7 +194,8 @@ If you have any comments, please do contact me.</p>
 <div class="w3-row-padding">
   <div class="w3-third w3-black">
 <img src="images/redandginger-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="Red and Ginger (Professional Dance Teachers)">
-    <h3>Red and Ginger (Vintage 1950s Tea Dance)</h3>
+    <h3>Red and Ginger</h3>
+	<h4>Vintage 1950s Tea Dance</h4>
     <p><a href="https://www.facebook.com/DanceWithRedAndGinger">Red and Ginger</a> are professional Lindy Hop dancer teachers.<br/>
 "We had a blast."<br/>
 "We loved way you played with the music for us to dance to."<br/>
@@ -194,7 +204,8 @@ If you have any comments, please do contact me.</p>
 
   <div class="w3-third w3-black">
 <img src="photos/andybgoode0027-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="Loughborough Loves Vintage Fair">
-    <h3>L . May (Loughborough Loves Vintage Fair)</h3>
+    <h3>L . May</h3>
+	<h4>Loughborough Loves Vintage Fair</h4>
     <p>"Andy, Thank you so SO much for today (I cannot actually thank you enough!!)."<br/>
 "You were absolutely brilliant, all day, and helped make the event a success."<br/>
 "I will definitely be in touch regarding the next event in Loughborough, and of course the August festival."</p>
@@ -202,7 +213,8 @@ If you have any comments, please do contact me.</p>
 
   <div class="w3-third w3-black">
 <img src="photos/thejays0027-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="Wedding Reception">
-    <h3>S. Greenwood (Her Wedding Reception)</h3>
+    <h3>S. Greenwood</h3>
+	<h4>Her Wedding Reception</h4>
     <p>"Thank you so much Andy you were fantastic and made our wedding day more magical x x x."</p>
   </div>
 </div>
@@ -211,21 +223,24 @@ If you have any comments, please do contact me.</p>
 <div class="w3-row-padding">
   <div class="w3-third w3-black">
 <img src="photos/andybgoode0030-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="Care Home">
-    <h3>L . Smith (Care Home)</h3>
+    <h3>L . Smith</h3>
+	<h4>Care Home</h4>
     <p>"The residents were still talking about you this morning."<br/>
 "Thanks again and see you soon."<br/>
 "It was fantastic!!"</p>
   </div>
 
   <div class="w3-third w3-black">
-<img src="photos/andybgoode0041-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx">
-    <h3>J. Harley (North West Leicestershire District Council)</h3>
+<img src="photos/andybgoode0038-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx">
+    <h3>J. Harley</h3>
+	<h4>North West Leicestershire District Council</h4>
     <p>"I booked you for a Christmas event in Ashby a few years ago, so know that you are really professional and very entertaining with a style that would fit our event beautifully."</p>
   </div>
 
   <div class="w3-third w3-black">
 <img src="photos/andybgoode0041-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx">
-    <h3>A. Bexton (North West Leicestershire District Council)</h3>
+    <h3>A. Bexton</h3>
+	<h4>North West Leicestershire District Council</h4>
     <p>"Just a quick note to say what a great performance you gave us on Saturday at Music in the Parks Coalville."<br/>
 "Everyone really enjoyed your set."<br/>
 "IT was a great opener to the event."</p>
@@ -237,20 +252,23 @@ If you have any comments, please do contact me.</p>
 <div class="w3-row-padding">
   <div class="w3-third w3-black">
 <img src="photos/andybgoode0012-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx">
-    <h3>title 1</h3>
-    <p>content 1</p>
+    <h3>title</h3>
+	<h4>where</h4>
+    <p>content</p>
   </div>
 
   <div class="w3-third w3-black">
 <img src="photos/andybgoode0012-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx">
-    <h3>title 2</h3>
-    <p>content 2</p>
+    <h3>title</h3>
+	<h4>where</h4>
+    <p>content</p>
   </div>
 
   <div class="w3-third w3-black">
 <img src="photos/andybgoode0012-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx">
-    <h3>title 3</h3>
-    <p>content 3</p>
+    <h3>title</h3>
+	<h4>where</h4>
+    <p>content</p>
   </div>
 </div>
 -->
