--- a/videos2.html
+++ b/videos2.html
@@ -5,7 +5,7 @@
  All rights reserved
  -->
 <head>
-<title>Andy B Goode - Reviews</title>
+<title>Andy B Goode - Videos</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="w3.css">
 
@@ -59,22 +59,21 @@
 <div class="w3-container w3-black">
 
 
-
 <div class="w3-bar w3-black">
   <a href="javascript:void(0)" class="w3-bar-item w3-button w3-border w3-hide-large w3-hide-medium" onclick="menuFunction()">&#9776;</a>
   <a href="index.html" class="w3-bar-item w3-button w3-border">Home</a>
   <a href="index.html#contact" class="w3-bar-item w3-button w3-border">Contact</a>
-  <a href="videos.html" class="w3-bar-item w3-button w3-border">Videos</a>
-  <a href="photos.html" class="w3-bar-item w3-button w3-border w3-hide-small">Photos</a>
+  <a href="photos.html" class="w3-bar-item w3-button w3-border">Photos</a>
   <a href="music.html" class="w3-bar-item w3-button w3-border w3-hide-small">Music</a>
   <a href="songlist.html" class="w3-bar-item w3-button w3-border w3-hide-small">Songs</a>
   <a href="news.html" class="w3-bar-item w3-button w3-border w3-hide-small">News</a>
+  <a href="reviews.html" class="w3-bar-item w3-button w3-border w3-hide-small">Reviews</a>
 </div>
 <div id="topMenu" class="w3-bar-block w3-border w3-hide w3-hide-large w3-hide-medium w3-black">
-  <a href="photos.html" class="w3-bar-item w3-button w3-border">Photos</a>
   <a href="music.html" class="w3-bar-item w3-button w3-border">Music</a>
   <a href="songlist.html" class="w3-bar-item w3-button w3-border">Songs</a>
   <a href="news.html" class="w3-bar-item w3-button w3-border">News</a>
+  <a href="reviews.html" class="w3-bar-item w3-button w3-border">Reviews</a>
 </div>
 <script>
 
@@ -92,7 +91,7 @@ function menuFunction() {
 
 
 <div class="w3-container w3-black w3-border-bottom w3-border-black">
-  <h1>Reviews</h1> 
+  <h1>Videos</h1>
 </div>
 
 
@@ -104,179 +103,88 @@ function menuFunction() {
 </div>
 
 
-<div class="w3-container w3-black">
-  <p>Here are some of the things that people have said about "Andy B Goode" gigs.<br/>
-If you have any comments, please do contact me.</p>
-</div>
-
-
 <div class="w3-row-padding">
   <div class="w3-third w3-black">
-<img src="photos/andybgoode0012-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="Dosthill Vintage Summer Fayre">  
-    <h3>J. Franklin</h3>
-    <h4>Fete</h4>
-    <p>"My expectations were vastly exceeded!  Great quality voice and equipment made for a splendid performance."<br/>
-"'Andy B Goode' is a splendid performer who gives consistently good performance across a wide range of singing styles."<br/>
-"'La Bamba' is especially good to hear. Perfect for weddings, christenings, birthdays etc.  Would highly recommend."</p>
+    <h3>Andy B Goode</h3>
+    <p><a href="videos.html#videoSummerShowReel2016">Andy B Goode Summer Showreel 2016</a><br/>
+<a href="videos.html#videoTeenagerInLove">Teenager in Love</a><br/>
+<a href="videos.html#videoJohnnyBGoode">Johnny B. Goode</a><br/>
+<a href="videos.html#videoEarthAngel">Earth Angel</a></p>
   </div>
 
   <div class="w3-third w3-black">
-<img src="photos/andybgoode0029-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="Dosthill Church Fete">
-    <h3>Rev L . Shaw</h3>
-    <h4>Dosthill, Church Fete</h4>
-    <p>"He created the perfect atmosphere."<br/>
-"Visitors to the fete and people on stalls were bopping away and enjoying the well known songs."<br/>
-"Andy B Goode was a quality addition to our fete and really made the day"</p>
+    <h3>The Jays Vintage</h3>
+    <p><a href="videos.html#videoAppleTreeLive">Don't Sit Under The Apple Tree (Live)</a><br/>
+<a href="videos.html#videoInTheMoodLive">In The Mood (Live)</a><br/>
+<a href="videos.html#videoSantaClausLive">Santa Claus is Coming To Town (Live)</a></p>
   </div>
 
   <div class="w3-third w3-black">
-<img src="photos/andybgoode0019-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="Polesworth Vintage and Antiques Fair">
-    <h3>N. Bauer</h3>
-    <h4>Polesworth, Vintage and Antiques Fair</h4>
-    <p>"The Act was awesome full a great mix of songs, and how you helped us by making the announcements for us was more than we expected."<br/>
-"He has an amazing voice and a thoroughly nice chap. If you need some vintage Rock N Roll, you need Andy B Goode."</p>
   </div>
 </div>
 
 
+
 <div class="w3-row-padding">
-  <div class="w3-third w3-black">
-<img src="photos/andybgoode0011-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="Dosthill Vintage Summer Fayre">
-    <h3>E . Cutler</h3>
-    <h4>Dosthill, Vintage Fayre</h4>
-    <p>"Andy B Goode exceeded our expectations, so professional, an excellent act which was very good value for money."<br/>
-"Having Andy B Goode at our vintage fair really set the scene and made the vintage context."<br/>
-"It was lovely to see people of all ages stop, sit and listen, sing along or boogie on down."</p>
+  <div id="videoSummerShowReel2016" class="w3-half-video w3-black">
+    <h2>Summer Showreel</h2>
+    <p>You could play 'name that tune' while you listen.</p>
+	<p>Snippets of many of my songs can be seen in my 'Andy B Goode Summer Showreel 2016'. This was recorded live at St Pauls Church Dosthill Summer Vintage Fete.</p>
+	<p><iframe class="w3-half-video-iframe"  src="https://www.youtube.com/embed/f4x4ei3muL8" frameborder="0" allowfullscreen></iframe></p>
   </div>
 
-  <div class="w3-third w3-black">
-<img src="photos/andybgoode0016-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="Birthday Party">
-    <h3>C. Kirkwood</h3>
-    <h4>Derby, Birthday Party</h4>
-    <p>"Your act was first class, very professional, Having heard you before we knew you would do a great job and we weren't disappointed. Great value for a special evening."<br/>
-"If anyone is looking for a fun, professional singing act, 'Andy B Goode' is the guy for you."<br/>
-"it doesn't matter the age group as the type of songs 'Andy B Goode' sings, he gets everybody singing and dancing along. Highly recommended."</p>
+  <div id="videoTeenagerInLove" class="w3-half-video w3-black">
+    <h2>Teenager In Love</h2>
+    <p>It's great to hear people joining in at the chorus. This was recorded at the Dosthill Summer Vintage Fayre. I also performed this song on on TCR FM at the 'Norton Juxta Twycross Summer Fete.</p>
+	<p><iframe class="w3-half-video-iframe" src="https://www.youtube.com/embed/xfGqHgRePIY" frameborder="0" allowfullscreen></iframe></p>
+  </div>
+</div>
+
+
+
+<div class="w3-row-padding">
+  <div id="videoJohnnyBGoode" class="w3-half w3-black">
+    <h2>Johnny B. Goode</h2>
+    <p>Feel free to sing along.<br/>
+'Johnny B. Goode' originally by the fantastic Chuck Berry. 'Back to the Future' is one of my favourite movies, and this track really adds energy to the film.</p>
+	<p><iframe class="w3-half-video-iframe" src="https://www.youtube.com/embed/9E8LMdoa5co" frameborder="0" allowfullscreen></iframe></p>
   </div>
 
-  <div class="w3-third w3-black">
-<img src="photos/andybgoode0017-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="Village Fair">
-    <h3>L . Ward</h3>
-    <h4>Norton-Juxta-Twycross, Village Fete</h4>
-    <p>"5/5…. act met my expectations, Andy B Goode was fantastic, great range of songs and always entertaining"<br/>
-"very entertaining - great show to sit and watch from start to finish, but also worked well as background music for people that were wandering in and out of the refreshment area, at our village fair"<br/>
-"The song selection was great and Andrew performance is suitable for a wide variety of events"</p>
+  <div id="videoEarthAngel" class="w3-half w3-black">
+    <h2>Earth Angel</h2>
+    <p>'Earth Angel' from originally by 'The Penguins'. I just keep singing songs from the 'Back to the Future' movie.</p>
+	<p><iframe class="w3-half-video-iframe" src="https://www.youtube.com/embed/oRQt2_bjvMU" frameborder="0" allowfullscreen></iframe></p>
   </div>
 </div>
 
 
 <div class="w3-row-padding">
-  <div class="w3-third w3-black">
-<img src="photos/andybgoode0005-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="Birthday Party">
-    <h3>E . Jones</h3>
-    <h4>Her Birthday Party</h4>
-    <p>"Totally! Fab evening completely brought to life with the excellent entertainment!"<br/>
-"Everyone commented about the great atmosphere with your music.  A great party atmosphere and very pro! Loved it!"</p>
+  <div id="videoInTheMoodLive" id="videoAppleTreeLive" class="w3-half w3-black">
+    <h2>Dont Sit Under The Apple Tree 'Live'</h2>
+    <p>The Jays Vintage (Vintage Vocal Harmony Tribute Group) performs the Andrews Sister's classic, "Don't Sit Under The Apple Tree". This was recorded live at cute Red Carpet Cinema at Barton Marina.</p>
+	<p><iframe class="w3-half-video-iframe" src="https://www.youtube.com/embed/xCA3tkEdPoc" frameborder="0" allowfullscreen></iframe></p>
   </div>
 
-  <div class="w3-third w3-black">
-<img src="photos/andybgoode0015-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="Birthday Party">
-    <h3>P. Reed</h3>
-	<h4>Birthday Party</h4>
-    <p>"The act was very good and met the expectations of the audience"<br/>
-"Great evening - people singing along with some rock classics and a great party atmosphere"</p>
-  </div>
-
-  <div class="w3-third w3-black">
-<img src="photos/thejays0006-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="Andy B Goode and The Jays at Tamworth Bandstand">
-    <h3>S. Smith</h3>
-    <h4>Tamworth Bandstand near Tamworth Castle</h4>
-    <p>"it was great, lot of familiar tunes which people enjoyed and danced to!"<br/>
-"Very upbeat and familiar set, great for a party, and for getting people dancing!"</p>
+  <div id="videoInTheMoodLive" class="w3-half w3-black">
+    <h2>In The Mood 'Live'</h2>
+    <p>The Jays Vintage (Vintage Vocal Harmony Tribute Group) performs the Andrews Sister's classic, "In The Mood" and it certainly was mood lighting that night. This was recorded live at Red Carpet Cinema at Barton Marina.</p>
+    <p><iframe class="w3-half-video-iframe" src="https://www.youtube.com/embed/jmuOGvFlFhw" frameborder="0" allowfullscreen></iframe></p>
   </div>
 </div>
+
 
 
 <div class="w3-row-padding">
-  <div class="w3-third w3-black">
-<img src="images/redandginger-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="Red and Ginger (Professional Dance Teachers)">
-    <h3>Red and Ginger</h3>
-    <h4>Vintage 1950s Tea Dance</h4>
-    <p><a href="https://www.facebook.com/DanceWithRedAndGinger">Red and Ginger</a> are professional Lindy Hop dancer teachers.<br/>
-"We had a blast."<br/>
-"We loved way you played with the music for us to dance to."<br/>
-"This guy is awesome. If you're a dancer, book him!"</p>
-  </div>
+  <div id="videoSantaClausLive" class="w3-half w3-black">
+    <h2>Santa Claus Is Coming To Town 'Live'</h2>
+    <p>The Jays Vintage (Vintage Vocal Harmony Tribute Group) performs the Perry Como Christmas classic, "Santa Claus is Coming To Town". This was recorded live at Red Carpet Cinema at Barton Marina.</p>
+    <p><iframe class="w3-half-video-iframe" src="https://www.youtube.com/embed/9WMEWi1d5m4" frameborder="0" allowfullscreen></iframe></p>
+</div>
 
-  <div class="w3-third w3-black">
-<img src="photos/andybgoode0027-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="Loughborough Loves Vintage Fair">
-    <h3>L . May</h3>
-    <h4>Loughborough Loves Vintage Fair</h4>
-    <p>"Andy, Thank you so SO much for today (I cannot actually thank you enough!!)."<br/>
-"You were absolutely brilliant, all day, and helped make the event a success."<br/>
-"I will definitely be in touch regarding the next event in Loughborough, and of course the August festival."</p>
-  </div>
-
-  <div class="w3-third w3-black">
-<img src="photos/thejays0027-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="Wedding Reception">
-    <h3>S. Greenwood</h3>
-    <h4>Her Wedding Reception</h4>
-    <p>"Thank you so much Andy you were fantastic and made our wedding day more magical x x x."</p>
+  <div class="w3-half w3-black">
   </div>
 </div>
 
-
-<div class="w3-row-padding">
-  <div class="w3-third w3-black">
-<img src="photos/andybgoode0030-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="Care Home">
-    <h3>L . Smith</h3>
-    <h4>Care Home</h4>
-    <p>"The residents were still talking about you this morning."<br/>
-"Thanks again and see you soon."<br/>
-"It was fantastic!!"</p>
-  </div>
-
-  <div class="w3-third w3-black">
-<img src="photos/andybgoode0038-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx">
-    <h3>J. Harley</h3>
-	<h4>North West Leicestershire District Council</h4>
-    <p>"I booked you for a Christmas event in Ashby a few years ago, so know that you are really professional and very entertaining with a style that would fit our event beautifully."</p>
-  </div>
-
-  <div class="w3-third w3-black">
-<img src="photos/andybgoode0041-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx">
-    <h3>A. Bexton</h3>
-    <h4>North West Leicestershire District Council</h4>
-    <p>"Just a quick note to say what a great performance you gave us on Saturday at Music in the Parks Coalville."<br/>
-"Everyone really enjoyed your set."<br/>
-"IT was a great opener to the event."</p>
-  </div>
-</div>
-
-
-<!--
-<div class="w3-row-padding">
-  <div class="w3-third w3-black">
-<img src="photos/andybgoode0012-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx">
-    <h3>title</h3>
-    <h4>where</h4>
-    <p>content</p>
-  </div>
-
-  <div class="w3-third w3-black">
-<img src="photos/andybgoode0012-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx">
-    <h3>title</h3>
-    <h4>where</h4>
-    <p>content</p>
-  </div>
-
-  <div class="w3-third w3-black">
-<img src="photos/andybgoode0012-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx">
-    <h3>title</h3>
-    <h4>where</h4>
-    <p>content</p>
-  </div>
-</div>
--->
 
 
 <div class="w3-container w3-black w3-border-bottom w3-border-black">
@@ -284,7 +192,6 @@ If you have any comments, please do contact me.</p>
 <img src="photos/andybgoode0037-thumb.jpg" class="w3-image w3-image-abg-1 w3-round" alt="xxxx"><img src="photos/andybgoode0008-thumb.jpg" class="w3-image w3-image-abg-2 w3-round" alt="xxxx"><img src="photos/thejays0004-thumb.jpg" class="w3-image w3-image-abg-3 w3-round" alt="1940s and Wartime Vocalist"><img src="photos/andybgoode0041-thumb.jpg" class="w3-image w3-image-abg-4 w3-round" alt="xxxx"><img src="photos/thejays0014-thumb.jpg" class="w3-image w3-image-abg-5 w3-round" alt="1960s Rat Pack, Swing Singer"><img src="photos/andybgoode0007-thumb.jpg" class="w3-image w3-image-abg-6 w3-round" alt="xxxx"><img src="photos/andybgoode0016-thumb.jpg" class="w3-image w3-image-abg-7 w3-round" alt="xxxx"><img src="photos/thejays0024-thumb.jpg" class="w3-image w3-image-abg-8 w3-round" alt="xxxx"><img src="photos/andybgoode0024-thumb.jpg" class="w3-image w3-image-abg-9 w3-round" alt="xxxx"> 
 </div>
 </div>
-
 
 
 
