--- a/news2.html
+++ b/news2.html
@@ -5,7 +5,7 @@
  All rights reserved
  -->
 <head>
-<title>Andy B Goode - Reviews</title>
+<title>Andy B Goode - News</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="w3.css">
 
@@ -58,8 +58,6 @@
 
 <div class="w3-container w3-black">
 
-
-
 <div class="w3-bar w3-black">
   <a href="javascript:void(0)" class="w3-bar-item w3-button w3-border w3-hide-large w3-hide-medium" onclick="menuFunction()">&#9776;</a>
   <a href="index.html" class="w3-bar-item w3-button w3-border">Home</a>
@@ -68,13 +66,13 @@
   <a href="photos.html" class="w3-bar-item w3-button w3-border w3-hide-small">Photos</a>
   <a href="music.html" class="w3-bar-item w3-button w3-border w3-hide-small">Music</a>
   <a href="songlist.html" class="w3-bar-item w3-button w3-border w3-hide-small">Songs</a>
-  <a href="news.html" class="w3-bar-item w3-button w3-border w3-hide-small">News</a>
+  <a href="reviews.html" class="w3-bar-item w3-button w3-border w3-hide-small">Reviews</a>
 </div>
 <div id="topMenu" class="w3-bar-block w3-border w3-hide w3-hide-large w3-hide-medium w3-black">
   <a href="photos.html" class="w3-bar-item w3-button w3-border">Photos</a>
   <a href="music.html" class="w3-bar-item w3-button w3-border">Music</a>
   <a href="songlist.html" class="w3-bar-item w3-button w3-border">Songs</a>
-  <a href="news.html" class="w3-bar-item w3-button w3-border">News</a>
+  <a href="reviews.html" class="w3-bar-item w3-button w3-border">Reviews</a>
 </div>
 <script>
 
@@ -92,7 +90,7 @@ function menuFunction() {
 
 
 <div class="w3-container w3-black w3-border-bottom w3-border-black">
-  <h1>Reviews</h1> 
+  <h1>News</h1> 
 </div>
 
 
@@ -105,150 +103,164 @@ function menuFunction() {
 
 
 <div class="w3-container w3-black">
-  <p>Here are some of the things that people have said about "Andy B Goode" gigs.<br/>
-If you have any comments, please do contact me.</p>
+  <p>News from the world of 'Andy B Goode'.</p>
 </div>
 
 
-<div class="w3-row-padding">
-  <div class="w3-third w3-black">
-<img src="photos/andybgoode0012-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="Dosthill Vintage Summer Fayre">  
-    <h3>J. Franklin</h3>
-    <h4>Fete</h4>
-    <p>"My expectations were vastly exceeded!  Great quality voice and equipment made for a splendid performance."<br/>
-"'Andy B Goode' is a splendid performer who gives consistently good performance across a wide range of singing styles."<br/>
-"'La Bamba' is especially good to hear. Perfect for weddings, christenings, birthdays etc.  Would highly recommend."</p>
-  </div>
-
-  <div class="w3-third w3-black">
-<img src="photos/andybgoode0029-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="Dosthill Church Fete">
-    <h3>Rev L . Shaw</h3>
-    <h4>Dosthill, Church Fete</h4>
-    <p>"He created the perfect atmosphere."<br/>
-"Visitors to the fete and people on stalls were bopping away and enjoying the well known songs."<br/>
-"Andy B Goode was a quality addition to our fete and really made the day"</p>
-  </div>
-
-  <div class="w3-third w3-black">
-<img src="photos/andybgoode0019-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="Polesworth Vintage and Antiques Fair">
-    <h3>N. Bauer</h3>
-    <h4>Polesworth, Vintage and Antiques Fair</h4>
-    <p>"The Act was awesome full a great mix of songs, and how you helped us by making the announcements for us was more than we expected."<br/>
-"He has an amazing voice and a thoroughly nice chap. If you need some vintage Rock N Roll, you need Andy B Goode."</p>
-  </div>
-</div>
-
 
 <div class="w3-row-padding">
+
   <div class="w3-third w3-black">
-<img src="photos/andybgoode0011-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="Dosthill Vintage Summer Fayre">
-    <h3>E . Cutler</h3>
-    <h4>Dosthill, Vintage Fayre</h4>
-    <p>"Andy B Goode exceeded our expectations, so professional, an excellent act which was very good value for money."<br/>
-"Having Andy B Goode at our vintage fair really set the scene and made the vintage context."<br/>
-"It was lovely to see people of all ages stop, sit and listen, sing along or boogie on down."</p>
+<img src="photos/andybgoode0040-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="Andy B Goode offers">
+    <h3>Special Offer / Free Gigs</h3>
+    <p>Discounted gig pricing is currently available for 2019 for some local events.<br/>
+This year I am giving a few FREE gigs to local worthy causes (Hospices, Charities, etc) so inquire soon if you represent a organisation that may enjoy some Vintage Rat Pack / Rock n Roll / 1940s fun.</p>
   </div>
 
   <div class="w3-third w3-black">
-<img src="photos/andybgoode0016-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="Birthday Party">
-    <h3>C. Kirkwood</h3>
-    <h4>Derby, Birthday Party</h4>
-    <p>"Your act was first class, very professional, Having heard you before we knew you would do a great job and we weren't disappointed. Great value for a special evening."<br/>
-"If anyone is looking for a fun, professional singing act, 'Andy B Goode' is the guy for you."<br/>
-"it doesn't matter the age group as the type of songs 'Andy B Goode' sings, he gets everybody singing and dancing along. Highly recommended."</p>
+<img src="photos/andybgoode0035-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="Rat Pack gigs">  
+    <h3>Rat Pack Gigs</h3>
+    <p>Since I started, I have always sang a few Sinatra and Nat King Cole songs amongst the Rock and Roll hits. These were always very popular and folks often asked for more of the same. I oblidged. In 2018 I launched a specific Rat Pack set. So if you enjoy a little Frank Sinatra, Dean Martin, Tony Bennett and other Crooners, do talk to me about a Rat Pack gig.</p>
   </div>
 
   <div class="w3-third w3-black">
-<img src="photos/andybgoode0017-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="Village Fair">
-    <h3>L . Ward</h3>
-    <h4>Norton-Juxta-Twycross, Village Fete</h4>
-    <p>"5/5…. act met my expectations, Andy B Goode was fantastic, great range of songs and always entertaining"<br/>
-"very entertaining - great show to sit and watch from start to finish, but also worked well as background music for people that were wandering in and out of the refreshment area, at our village fair"<br/>
-"The song selection was great and Andrew performance is suitable for a wide variety of events"</p>
+<img src="photos/andybgoode0028-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="Vintage Love EP">
+    <h3>Vintage Love EP</h3>
+    <p>My 'Love' EP is now available<br/>
+5 pounds for 5 Romantic Vintage Tracks.<br/>
+It makes a lovely gift for that special someone.<br/>
+Contact me or meet me at a gig to get yours.<br/>
+Or click to download each mp3 for free.<br/>
+<a href="music.html#musicLetThereBeLove">'Let There Be Love'</a><br/>
+<a href="music.html#musicYoung">'You Make Me Feel So Young'</a><br/>
+<a href="music.html#musicEarth">'Earth Angel'</a><br/>
+<a href="music.html#musicLove">'L-O-V-E'</a><br/>
+<a href="music.html#musicPoetry">'Poetry in Motion'</a></p>
   </div>
 </div>
 
 
 <div class="w3-row-padding">
   <div class="w3-third w3-black">
-<img src="photos/andybgoode0005-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="Birthday Party">
-    <h3>E . Jones</h3>
-    <h4>Her Birthday Party</h4>
-    <p>"Totally! Fab evening completely brought to life with the excellent entertainment!"<br/>
-"Everyone commented about the great atmosphere with your music.  A great party atmosphere and very pro! Loved it!"</p>
+<img src="photos/andybgoode0012-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="Andy B Goode Showreel">  
+    <h3>Summer Showreel</h3>
+    <p>Snippets of many of my songs can be seen in my <a href="music.html#videos">'Summer Showreel 2016'</a>, which was recorded live at St Pauls Church Dosthill Summer Vintage Fete.</p>
   </div>
 
   <div class="w3-third w3-black">
-<img src="photos/andybgoode0015-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="Birthday Party">
-    <h3>P. Reed</h3>
-	<h4>Birthday Party</h4>
-    <p>"The act was very good and met the expectations of the audience"<br/>
-"Great evening - people singing along with some rock classics and a great party atmosphere"</p>
+<img src="photos/andybgoode0038-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="War time event">
+    <h3>War-Time Themed Nights</h3>
+    <p>Themed nights are always enjoyable, as the audience comes ready to enjoy the experience. Some like to dress up.</p>
   </div>
 
   <div class="w3-third w3-black">
-<img src="photos/thejays0006-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="Andy B Goode and The Jays at Tamworth Bandstand">
-    <h3>S. Smith</h3>
-    <h4>Tamworth Bandstand near Tamworth Castle</h4>
-    <p>"it was great, lot of familiar tunes which people enjoyed and danced to!"<br/>
-"Very upbeat and familiar set, great for a party, and for getting people dancing!"</p>
+<img src="photos/andybgoode0041-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="Local Festivals">
+    <h3>Festivals</h3>
+    <p>Over 2018 I performed at a few local festivals which was a blast. 'Church Gresley Proms in the Park' and 'Coleville Music in the Park' were particularly fun.</p>
   </div>
 </div>
 
 
 <div class="w3-row-padding">
   <div class="w3-third w3-black">
-<img src="images/redandginger-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="Red and Ginger (Professional Dance Teachers)">
-    <h3>Red and Ginger</h3>
-    <h4>Vintage 1950s Tea Dance</h4>
-    <p><a href="https://www.facebook.com/DanceWithRedAndGinger">Red and Ginger</a> are professional Lindy Hop dancer teachers.<br/>
-"We had a blast."<br/>
-"We loved way you played with the music for us to dance to."<br/>
-"This guy is awesome. If you're a dancer, book him!"</p>
+<img src="images/redandginger-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="Red and Ginger">  
+    <h3>1950s Tea Dance</h3>
+    <h4>April 2017, Coleorton</h4>
+    <p>The <a href="https://www.facebook.com/LoughboroughLovesVintage">LoughboroughLovesVintage</a> Good Friday Vintage 1950s Tea Dance was a big hit. 
+I sang Rock n Roll while fabulous <a href="https://www.facebook.com/DanceWithRedAndGinger">Red and Ginger</a> lead the dancing. 
+They are a pair of top quality dance teachers who defy gravity with their fancy footwork. I can whole-heartedly recommend them. 
+Can't wait for them to arrange more events!</p>
   </div>
 
   <div class="w3-third w3-black">
-<img src="photos/andybgoode0027-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="Loughborough Loves Vintage Fair">
-    <h3>L . May</h3>
-    <h4>Loughborough Loves Vintage Fair</h4>
-    <p>"Andy, Thank you so SO much for today (I cannot actually thank you enough!!)."<br/>
-"You were absolutely brilliant, all day, and helped make the event a success."<br/>
-"I will definitely be in touch regarding the next event in Loughborough, and of course the August festival."</p>
+<img src="images/curlymagpie-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="Curly Magpie">
+    <h3>Vintage And Handmade Fair</h3>
+    <h4>March 2017, Calke Abbey</h4>
+    <p>I sang at the '<a href="http://www.curlymagpie.co.uk/">Curly Magpie</a> Vintage and Handmade Fair'.
+The day was sunny and Calke Abbey was a beautiful venue.<br/>
+Live entertainment also came from the lovely female vintage soloist <a href="https://www.facebook.com/RebeccaJayneVocalist">'Rebecca Jayne'</a> and the skilled 'Kevin Goodall Saxophonist'. The fair was bustling with 1000s of people enjoying the day.</p>
   </div>
 
   <div class="w3-third w3-black">
-<img src="photos/thejays0027-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="Wedding Reception">
-    <h3>S. Greenwood</h3>
-    <h4>Her Wedding Reception</h4>
-    <p>"Thank you so much Andy you were fantastic and made our wedding day more magical x x x."</p>
+<img src="photos/andybgoode0027-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="AndyBGoode">
+    <h3>Loughborough Loves Vintage Fair</h3>
+    <h4>Feb 2017, Rosebery St Peters Community Centre, Loughborough</h4>
+    <p><a href="https://www.facebook.com/LoughboroughLovesVintage">LoughboroughLovesVintage</a> Vintage Fayre.<br/>
+A lovely little vintage afternoon.<br/>
+As it was nearly Valentines day week, I sang Rock and Roll and Crooned some Love songs. 
+Also live entertainment came from the talented <a href="https://www.facebook.com/EleanorSings">'Eleanor Mattley'</a>. 
+There were Vintage stalls selling: clothing, accessories, homewares. 
+The 'Pop up tea room' served amazing cakes, milkshakes and afternoon Teas.</p>
   </div>
 </div>
 
 
 <div class="w3-row-padding">
   <div class="w3-third w3-black">
-<img src="photos/andybgoode0030-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="Care Home">
-    <h3>L . Smith</h3>
-    <h4>Care Home</h4>
-    <p>"The residents were still talking about you this morning."<br/>
-"Thanks again and see you soon."<br/>
-"It was fantastic!!"</p>
+<img src="photos/andybgoode0024-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="Andy B Goode at Swadlincote">  
+    <h3>Swadlincote International Food And Drink Festival</h3>
+    <h4>October 2016, Swadlincote</h4>
+    <p><a href="http://www.south-derbys.gov.uk/community_and_living/community_events/international_food/default.asp">Swadlincote International Food and Drink Festival</a>. Outside the lovely '<a href="http://www.curlymagpie.co.uk/">Curly Magpie</a>' vintage shop. I sung classic Rock and Crooner tunes while people danced in the street.<br/>
+It was energetic 1950s Rock n Roll and tasty food from all over the world...What more could you want?</p>
   </div>
 
   <div class="w3-third w3-black">
-<img src="photos/andybgoode0038-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx">
-    <h3>J. Harley</h3>
-	<h4>North West Leicestershire District Council</h4>
-    <p>"I booked you for a Christmas event in Ashby a few years ago, so know that you are really professional and very entertaining with a style that would fit our event beautifully."</p>
+<img src="photos/andybgoode0030-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="Andy B Goode at Care Homes">
+    <h3>Care Homes</h3>
+    <p>It's great singing at care homes. See their faces light up as they recognise a favourite song from their youth. You just watch them sing along enjoying those classics and know all that practicing is worthwhile.<br/>
+</p>
   </div>
 
   <div class="w3-third w3-black">
-<img src="photos/andybgoode0041-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx">
-    <h3>A. Bexton</h3>
-    <h4>North West Leicestershire District Council</h4>
-    <p>"Just a quick note to say what a great performance you gave us on Saturday at Music in the Parks Coalville."<br/>
-"Everyone really enjoyed your set."<br/>
-"IT was a great opener to the event."</p>
+<img src="photos/andybgoode0016-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="Andy B Goode in Derby">
+    <h3>Birthdays, Anniversaries</h3>
+    <p>Every year I do birthday parties for those who require something a bit special. 50th Wedding anniversaries are always great fun. People normally sing along and dance and their time away.</p>
+  </div>
+</div>
+
+
+<div class="w3-row-padding">
+  <div class="w3-third w3-black">
+<img src="photos/andybgoode0020-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="Andy B Goode at Tamworth">  
+    <h3>Food Gusto Food Fair</h3>
+    <h4>September 2016</h4>
+    <p><a href="http://www.foodgusto.com/tamworth-festival/">Food Gusto Fayre</a> in the Tamworth Castle, Pleasure Grounds. A Food Festival in Tamworth. I performed with '<a href="https://www.facebook.com/TheJaysVintage">The Jays Vintage</a>' multiple times during the day.<br/>
+What a lovely sunny day it was so the beautiful 1940s Andrews Sisters style Vintage Harmonies and Energetic 1950s Rock n Roll really added to the upbeat atmosphere. The food was so really varied and most tasty. So many spicy flavours. One for next years diary... I need some of those amazing meat pies and samosas.</p>
+  </div>
+
+  <div class="w3-third w3-black">
+<img src="photos/andybgoode0017-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="Andy B Goode at Norton Juxta Twycross">
+    <h3>Norton Juxta Twycross Summer Village Fete</h3>
+    <h4>June 2016</h4>
+    <p>I provided live music beside the swimming pool as people had a cream tea. This included: barbecue, cream teas, coconut shy, skittles competition, vintage steam engine, delicious home made ice cream, stalls and the annual dog show.<br/>
+I performed "Teenager in Love" live on the top local radio station TCR FM (<a href="http://www.tcrfm.co.uk">www.tcrfm.co.uk</a>).</p>
+  </div>
+
+  <div class="w3-third w3-black">
+<img src="photos/andybgoode0004-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="Andy B Goode at Polesworth">
+    <h3>Warwickshire Vintage And Antiques Fayre</h3>
+    <h4>July 2017</h4>
+    <p>This was a great local vintage fayre in Poleworth. 
+Loads of stalls with Dresses and other collectables. I sang for a couple of hours to add a retro touch. 
+I even bought a few xmas presents!</p>
+  </div>
+</div>
+
+
+<div class="w3-row-padding">
+  <div class="w3-third w3-black">
+<img src="photos/andybgoode0011-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="Andy B Goode at Dosthill">  
+    <h3>Dosthill Church Vintage Fete</h3>
+    <h4>June 2016</h4>
+    <p>St. Pauls Dosthill: A classic British summer Fete in Dosthill at the pretty Church. 
+Loads of stalls, a barbeque and yummy cakes were available. Many friends came and I sang lots of new songs (while avoiding the light showers). 
+People joined in on some songs, which was lovely.</p>
+  </div>
+
+  <div class="w3-third w3-black">
+  </div>
+
+  <div class="w3-third w3-black">
   </div>
 </div>
 
@@ -256,24 +268,21 @@ If you have any comments, please do contact me.</p>
 <!--
 <div class="w3-row-padding">
   <div class="w3-third w3-black">
-<img src="photos/andybgoode0012-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx">
-    <h3>title</h3>
-    <h4>where</h4>
-    <p>content</p>
+<img src="photos/andybgoode0010-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxx">  
+    <h3>aaa</h3>
+    <p>bbbb</p>
   </div>
 
   <div class="w3-third w3-black">
-<img src="photos/andybgoode0012-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx">
-    <h3>title</h3>
-    <h4>where</h4>
-    <p>content</p>
+<img src="photos/andybgoode0010-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxx">
+    <h3>aaa</h3>
+    <p>bbbb</p>
   </div>
 
   <div class="w3-third w3-black">
-<img src="photos/andybgoode0012-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxxx">
-    <h3>title</h3>
-    <h4>where</h4>
-    <p>content</p>
+<img src="photos/andybgoode0010-thumb.jpg" class="w3-image w3-image-abg w3-round" alt="xxx">
+    <h3>aaa</h3>
+    <p>bbbb</p>
   </div>
 </div>
 -->
@@ -284,7 +293,6 @@ If you have any comments, please do contact me.</p>
 <img src="photos/andybgoode0037-thumb.jpg" class="w3-image w3-image-abg-1 w3-round" alt="xxxx"><img src="photos/andybgoode0008-thumb.jpg" class="w3-image w3-image-abg-2 w3-round" alt="xxxx"><img src="photos/thejays0004-thumb.jpg" class="w3-image w3-image-abg-3 w3-round" alt="1940s and Wartime Vocalist"><img src="photos/andybgoode0041-thumb.jpg" class="w3-image w3-image-abg-4 w3-round" alt="xxxx"><img src="photos/thejays0014-thumb.jpg" class="w3-image w3-image-abg-5 w3-round" alt="1960s Rat Pack, Swing Singer"><img src="photos/andybgoode0007-thumb.jpg" class="w3-image w3-image-abg-6 w3-round" alt="xxxx"><img src="photos/andybgoode0016-thumb.jpg" class="w3-image w3-image-abg-7 w3-round" alt="xxxx"><img src="photos/thejays0024-thumb.jpg" class="w3-image w3-image-abg-8 w3-round" alt="xxxx"><img src="photos/andybgoode0024-thumb.jpg" class="w3-image w3-image-abg-9 w3-round" alt="xxxx"> 
 </div>
 </div>
-
 
 
 
